# serper-mcp-server

./: README.md  pyproject.toml
.github/workflows/: push-to-pypi.yaml
src/serper_mcp_server/: __init__.py  core.py  enums.py  schemas.py  server.py
